--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "homepage": "https://github.com/MyWellGiving/bs-storybook",
   "repository": "https://github.com/MyWellGiving/bs-storybook",
   "bugs": "https://github.com/MyWellGiving/bs-storybook/issues",
-  "keywords": ["BuckleScript", "Storybook.js", "ReasonML", "react", "ui"],
+  "keywords": [
+    "BuckleScript",
+    "Storybook.js",
+    "ReasonML",
+    "react",
+    "ui"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "bs-platform": "^2.1.0",
+    "bs-platform": "^3.1.5",
     "prettier": "^1.10.2"
   },
   "dependencies": {
-    "reason-react": "^0.3.0"
+    "reason-react": "^0.4.2"
   },
   "peerDependencies": {
     "@storybook/addon-actions": "^3.2.17",
